# read_rdf

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: read_rdf_extension.cpp  serd_buffer.cpp
src/include/: serd_buffer.hpp
test/rdf/glob_test/: empty.ttl  file1.ttl  file2.ttl  file3.nt  has_base.ttl  no_base_rel.ttl
test/rdf/glob_test/subdir/: nested.ttl
test/sql/: read_rdf.test  read_rdf_glob.test
